recursion.logo.lessons.recursion.logo.spiral.SpiralUse.scala.error
SpiralUse:3: error: Non-zero integral values may not have a leading zero.
    spiral(00,121,1,3);
           ^SpiralUse:3: error: illegal start of simple expression
    spiral(00,121,1,3);
           ^SpiralUse:4: error: ')' expected but '}' found.
} 
^